<resources>
    <string name="app_name">GanHuo</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_exit">提示</string>
    <string name="msg_exit">您确定要退出应用么？</string>

    <string name="transition_share_photo">transition:PHOTO</string>


    <!-- toolbar title -->
    <string name="app_login">Login</string>
    <string name="app_regist">Regist</string>



    <!-- guide -->
    <string name="guide_msg">欢迎您的使用\n哈哈哈</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>


    <!-- 登录 -->
    <string name="user_login_name_hint">UserName or Email</string>
    <string name="user_login_name_error_null">UserName or Email is null</string>
    <string name="user_login_password_hint">Passowrd</string>
    <string name="user_login_password_error_null">password is null</string>


    <!-- main -->
    <!--left menu -->
    <string name="mian_left_menu_favourites">FAVOURITES</string>
    <string name="mian_left_menu_follow">FOLLOW</string>
    <string name="mian_left_menu_feedback">FEEDBACK</string>
    <string name="mian_left_menu_setting">SETTING</string>

    <!-- home -->
    <string name="home_tab_local">LOCAL EXPERIENCES</string>
    <string name="home_tab_traveler">TRAVELER REQUESTS</string>


    <!-- progress msg -->
    <string name="progress_msg_default">Loading, Please wait...</string>
    <string name="progress_msg_login">User Logining, Please wait...</string>
    <string name="progress_loading">Loading…</string>
    <string name="no_more_data">No more data</string>


</resources>
