<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/item_favourites"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mian_left_menu_favourites" />
        <item
            android:id="@+id/item_follow"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mian_left_menu_follow" />
        <item
            android:id="@+id/item_feedback"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mian_left_menu_feedback" />
        <item
            android:id="@+id/item_setting"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mian_left_menu_setting" />
    </group>
</menu>
