<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/dp_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_login_til_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/user_login_edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:hint="@string/user_login_name_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_login_til_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_20"
            >
            <EditText
                android:id="@+id/user_login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:hint="@string/user_login_password_hint"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/user_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:minHeight="@dimen/dp_48"
        android:background="@drawable/guide_button_blue"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/white"
        android:text="@string/login"
        />

</RelativeLayout>